<resources>
    <string name="app_name">UBI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login User</string>
    <string name="login">Login</string>

    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>

    <!--Detail-->
    <string name="detail">Detail</string>
    <string name="device">Device Name:</string>
    <string name="title_signal">Show ECG Signal</string>


    <!--Register-->
    <string name="register_dummy">Register as a new doctor</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="user_name">Username</string>
    <string name="phone">Phone</string>
    <string name="return_to_login">Return to login</string>
    <string name="register_succ">Your Registertion request is approved by out team.Now you can login with your email and phone number as password.</string>

    <!--Edit-->
    <string name="edit_dummy">Edit profile</string>
    <string name="edit">Edit</string>
    <string name="profile_changed">Your profile have changed.</string>
    <string name="address">Address</string>


    <!--Main-->
    <string name="add_new_patient">Add New Patient</string>

    <!--Fragment Patient-->
    <string name="name_patient">Name</string>
    <string name="medicine_patient">Medicine</string>
    <string name="health_info_patient">Health info</string>

    <!--Device-->
    <string name="device_prompt">Available Devices</string>
    <string name="btn_select_device">Select a device</string>
    <string name="add_new_device">Add New Device</string>
    <string name="order_date">Order date</string>
    <string name="expire_date">Expire date</string>
    <string name="device_name">Device name</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!--Patient-->
    <string name="spinner_title">Devices</string>
    <string name="user_insurance_name">Insurance_name</string>
    <string name="user_gender">Gender</string>
    <string name="user_birthdate">Birthdate</string>
    <string name="user_company_insurance">Company insurance</string>
    <string name="user_reasons_visit">Reasons_visit</string>
    <string name="user_condition">Condition</string>
    <string name="user_avs">AVS/N</string>



    <string-array name="status">
        <item>walking</item>
        <item>lying</item>
        <item>sitting</item>
        <item>running</item>
    </string-array>


    <string-array name="device_arrays">
        <item>UBI1505</item>
        <item>UBI16256</item>
        <item>UBI0180</item>
        <item>UBI1139</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>Female</item>
        <item>Male</item>

    </string-array>

</resources>
