<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/green"
        android:src="@drawable/logo"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="7dp"
        android:layout_below="@id/logo_img"
        app:cardElevation="22dp">

        <!--android:text="@string/login_dummy"-->

        <TextView
            style="@style/TextStyle.Comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:text="@string/login_dummy"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:drawableRight="@drawable/email4"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_password_Ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:maxLength="13"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/lock"
                    android:textColorHint="@color/gray"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_server_login"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="10dp"
                android:text="@string/login"
                android:textSize="18dp" />
            <Button
                android:id="@+id/btn_register"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="10dp"
                android:text="@string/register"
                android:textSize="18dp" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
