<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    >

    <!--android:background="@drawable/bg_design"-->
    <!--android:background="@drawable/gradient_bg"-->

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/green"
        android:src="@drawable/logo"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_img"
        app:cardElevation="22dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_img"
            android:background="@color/transparent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/Ly_user_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/transparent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/user_silhouette"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorPrimary" />

            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_email_Ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:drawableRight="@drawable/email4"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textColorHint="@color/black"
                    android:drawableRight="@drawable/id"
                    android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_phone_Ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp"
                    android:hint="@string/phone"
                    android:textColorHint="@color/black"
                    android:drawableRight="@drawable/smartphone"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_password_Ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/input_border_bottom"
                    android:cursorVisible="true"
                    android:gravity="center|left|bottom"
                    android:maxLength="13"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black_effective"
                    android:textSize="18sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <com.dd.morphingbutton.MorphingButton
                android:id="@+id/btnMorph1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_return"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/return_to_login"
                android:visibility="invisible"
                android:textColor="@color/blue"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>>



    <!--</android.support.v7.widget.CardView>-->

</android.support.constraint.ConstraintLayout>
