<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/iv_logo_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_icon_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>


    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_splash"
        android:gravity="center"
        android:text="Ubi Health"
        android:textColor="@color/colorAccent3"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_email_Ly"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_margin="10dp"
        >

        <RelativeLayout
            android:id="@+id/Ly_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border_bottom"

            >
            <ImageView
                android:id="@+id/iv_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/dark_gray_s"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_envelope1"
                android:background="@color/transparent"
                android:layout_alignParentLeft="true"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textColorHint="@color/dark_gray_s"
                android:textSize="12sp"

                />
        </RelativeLayout>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/et_password_Ly"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_Ly"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/tv_company_name"
        app:passwordToggleEnabled="true">

        <RelativeLayout
            android:id="@+id/Ly_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border_bottom"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/dark_gray_s"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_key"
                android:background="@color/transparent"
                android:layout_alignParentLeft="true"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textColorHint="@color/dark_gray_s"
                android:textSize="12sp"
                />
        </RelativeLayout>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/et_name_Ly"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_Ly"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/Ly_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border_bottom"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/iv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/dark_gray_s"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_user"
                android:background="@color/transparent"
                android:layout_alignParentLeft="true"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textColorHint="@color/dark_gray_s"
                android:textSize="12sp"
                />
        </RelativeLayout>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/et_phone_Ly"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name_Ly"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:id="@+id/Ly_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border_bottom"
            android:layout_marginTop="10dp"
            >
            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textColor="@color/dark_gray_s"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_phone_call"
                android:background="@color/transparent"
                android:layout_alignParentLeft="true"
                />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:cursorVisible="true"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textColorHint="@color/dark_gray_s"
                android:textSize="12sp"
                />
        </RelativeLayout>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toBottomOf="@id/et_phone_Ly"
        android:background="@drawable/rounded_button_acount"
        android:text="SIGN UP"
        android:textColor="@color/white"
        android:textSize="15sp"
        />


    <TextView
        android:id="@+id/tv_register_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        android:text="Already have an account"
        android:textColor="@color/red"
        android:gravity="center"
        android:textSize="15sp"
        />



</android.support.constraint.ConstraintLayout>
